--- a/app/src/main/res/layout/fragment_change_dialog.xml
+++ b/app/src/main/res/layout/fragment_change_dialog.xml
@@ -8,30 +8,50 @@
 
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:orientation="vertical">
-
-        <EditText
-            android:id="@+id/change_dialog_title"
-            android:layout_width="match_parent"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="Title" />
-
+            android:text="English"
+            android:textSize="30dp"/>
         <EditText
-            android:id="@+id/change_dialog_discription"
-            android:layout_width="match_parent"
+            android:id="@+id/change_dialog_english_edittext"
+            android:layout_width="270dp"
+            android:layout_marginLeft="20dp"
             android:layout_height="wrap_content"
-            android:hint="@string/discription" />
+
+            />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Persion"
+            android:textSize="30dp"/>
+        <EditText
+            android:id="@+id/change_dialog_persian_edittext"
+            android:layout_width="270dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            />
+
     </LinearLayout>
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp">
         <androidx.appcompat.widget.AppCompatImageButton
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:id="@+id/share_button_changedialog"
+            android:id="@+id/share_button_change_dialog"
             android:src="@drawable/ic_share"/>
     </LinearLayout>
     <LinearLayout
