--- a/app/src/main/res/layout/fragment_dia_log.xml
+++ b/app/src/main/res/layout/fragment_dia_log.xml
@@ -8,31 +8,40 @@
 
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_gravity="center">
-        <EditText
-            android:layout_width="match_parent"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="@string/title"
-            android:id="@+id/dialog_title"
-            />
+            android:text="English"
+            android:textSize="30dp"/>
         <EditText
-            android:layout_width="match_parent"
+            android:id="@+id/dialog_english_edittext"
+            android:layout_width="240dp"
+            android:layout_marginLeft="20dp"
             android:layout_height="wrap_content"
-            android:hint="@string/discription"
-            android:id="@+id/dialog_discription"
+
             />
+
     </LinearLayout>
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-        <androidx.appcompat.widget.AppCompatImageButton
-            android:layout_height="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:orientation="horizontal">
+        <TextView
             android:layout_width="wrap_content"
-            android:id="@+id/share_button_dialog"
-            android:src="@drawable/ic_share"/>
+            android:layout_height="wrap_content"
+            android:text="Persion"
+            android:textSize="30dp"/>
+        <EditText
+            android:id="@+id/dialog_persian_edittext"
+            android:layout_width="240dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            />
+
     </LinearLayout>
 
 </LinearLayout>
