--- a/app/src/main/res/layout/fragment_change_dialog.xml
+++ b/app/src/main/res/layout/fragment_change_dialog.xml
@@ -56,16 +56,16 @@
             />
 
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp">
-        <androidx.appcompat.widget.AppCompatImageButton
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:id="@+id/share_button_change_dialog"
-            android:src="@drawable/ic_share"/>
-    </LinearLayout>
+
+
+    <ImageButton
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:id="@+id/share_button_change_dialog"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@drawable/ic_share"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
